--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ install:
   - "git clone https://github.com/jason-neal/Starfish.git"
   - "cd c:\\projects\\Starfish"
   - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
-  - "git checkout windows"
+  - "git checkout eniric_suitable"
   - "%PYTHON%\\python.exe setup.py develop"
 
 
