--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ multiprocess
 pandas
 scipy
 spectrum-overload>=0.2.1
-# Starfish
+astrostarfish
 sqlalchemy>=1.3.0
 tqdm
 typing>=3.5.3.0  # Otherwise yarl fail with python 3.4
