--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,11 @@ environment:
 #    - PYTHON: "C:\\Python38"
     - PYTHON: "C:\\Python36-x64"
 
+cache:
+  - "%LOCALAPPDATA%\\pip\\Cache -> appveyor.yml" 
+  
 install:
+  - SET PATH=%PYTHON%;%PYTHON%\Scripts\;%path%
   # We need wheel installed to build wheels
   - "%PYTHON%\\python.exe -m pip install --upgrade pip"
   - "%PYTHON%\\python.exe -m pip install wheel"
